--- a/anarchy_theme/static/basic.css
+++ b/anarchy_theme/static/basic.css
@@ -179,6 +179,7 @@ div > .highlight {
     border: 1px solid #E1E1E1;
     border-radius: 4px;
     border-left: 4px solid #E1E1E1;
+    overflow-x: auto;
 }
 
 .highlight-swift > div {
