--- a/anarchy_theme/static/basic.css
+++ b/anarchy_theme/static/basic.css
@@ -243,17 +243,28 @@ code.descname {
 
 table.field-list {
     margin-bottom: 5px;
+    border: none;
 }
 
 table.field-list th {
     text-align: left;
     padding: 0 10px 0 0;
     vertical-align: top;
+    border: none;
 }
 
 table.field-list td {
     padding: 0;
     vertical-align: top;
+    border: none;
+}
+
+table.field-list td.field-body {
+    padding-bottom: 20px;
+}
+
+table.field-list tr.field th.field-name {
+    padding-top: 0;
 }
 
 td.field-body ul,
