Add small bullet before navigation items

--- a/anarchy_theme/static/basic.css
+++ b/anarchy_theme/static/basic.css
@@ -116,6 +116,10 @@ nav ul.rel {
     float: right;
 }
 
+nav li:before {
+    content: "•";
+}
+
 nav li {
     display: inline-block;
     text-transform: capitalize;
